@@ -1,3 +1,7 @@
+2000-09-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* charmaps/GB18030: Comment out entries in user-defined area.
+
 2000-09-11  Ulrich Drepper  <drepper@redhat.com>
 
 	* charmaps/GB18030: Add back entries which got lost in last change.
